Fix grid menu for dark mode

--- a/components/TopBar/GridMenu/Menu/index.module.scss
+++ b/components/TopBar/GridMenu/Menu/index.module.scss
@@ -8,7 +8,7 @@
   &.dark {
     > li {
       a {
-        color: rgba(249, 249, 253, 0.7);
+        color: rgba(235, 235, 245, 0.3);
       }
 
       &.active a {
@@ -34,7 +34,6 @@
       color: rgba(52, 58, 64, 0.3);
 
       &[data-disabled=true] {
-        // pointer-events: none;
         cursor: default;
       }
     }
